--- a/components/instagram/InstagramConfirmation.css
+++ b/components/instagram/InstagramConfirmation.css
@@ -8,11 +8,11 @@
 
 .insta-box {
     background-color: white;
-    padding: 40px;
-    border-radius: 2px;
-    box-shadow: 0px 4px 16px rgb(219, 219, 219);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 350px;
+    width: 400px;
 }
 
 .insta-logo {
@@ -22,7 +22,7 @@
 
 .insta-title {
     font-family: 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     color: #262626;
     margin-bottom: 20px;
@@ -30,9 +30,9 @@
 
 .insta-text {
     font-family: 'Helvetica Neue', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     color: #8e8e8e;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .insta-options {
@@ -58,7 +58,7 @@
 }
 
 .insta-button.it-wasnt-me:hover {
-    background-color: #b33629; /* Darker red on hover */
+    background-color: #b33629;
 }
 
 .confirmation-container {
@@ -78,7 +78,7 @@ p {
 
 .button-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
 }
@@ -118,33 +118,6 @@ p {
     background-color: red;
     color: white;
 }
-    
-.insta-box {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 400px;
-}
-
-
-.insta-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.insta-text {
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-.button-container {
-    display: flex;
-    justify-content: space-between;
-}
-
 
 .insta-form {
     display: flex;
@@ -156,7 +129,6 @@ p {
     width: 100%;
     margin-bottom: 15px;
     text-align: left;
- 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -166,8 +138,6 @@ p {
     font-size: 14px;
     margin-bottom: 5px;
     display: block;
- 
-    align-items: center;
 }
 
 .input-group input {
@@ -191,8 +161,6 @@ p {
     border-radius: 5px;
 }
 
-
-
 .progress-bar {
     width: 100%;
     background-color: #f3f3f3;
@@ -205,7 +173,7 @@ p {
 .progress-bar-fill {
     height: 100%;
     background-color: #0095f6;
-    width: 0; /* Start empty */
+    width: 0;
     transition: width 0.3s ease;
 }
 
@@ -214,6 +182,7 @@ p {
     color: #262626;
     margin-top: 10px;
 }
+
 .emailFormOpen{
     height: 90vh;
 }
